python_ffi/lotrc.h


typedef struct mut_slice_ObjAPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_ObjAPc;
typedef struct DumpInfo_ObjAPc {
  struct mut_slice_ObjAPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_ObjAPc;
typedef struct mut_slice_Obj0Pc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Obj0Pc;
typedef struct DumpInfo_Obj0Pc {
  struct mut_slice_Obj0Pc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Obj0Pc;
typedef struct mut_slice_ModelInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_ModelInfoPc;
typedef struct DumpInfo_ModelInfoPc {
  struct mut_slice_ModelInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_ModelInfoPc;
typedef struct mut_slice_BufferInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_BufferInfoPc;
typedef struct DumpInfo_BufferInfoPc {
  struct mut_slice_BufferInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_BufferInfoPc;
typedef struct mut_slice_Mat1Pc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat1Pc;
typedef struct DumpInfo_Mat1Pc {
  struct mut_slice_Mat1Pc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat1Pc;
typedef struct mut_slice_Mat2Pc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat2Pc;
typedef struct DumpInfo_Mat2Pc {
  struct mut_slice_Mat2Pc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat2Pc;
typedef struct mut_slice_Mat3Pc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat3Pc;
typedef struct DumpInfo_Mat3Pc {
  struct mut_slice_Mat3Pc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat3Pc;
typedef struct mut_slice_Mat4Pc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat4Pc;
typedef struct DumpInfo_Mat4Pc {
  struct mut_slice_Mat4Pc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat4Pc;
typedef struct mut_slice_MatExtraPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_MatExtraPc;
typedef struct DumpInfo_MatExtraPc {
  struct mut_slice_MatExtraPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_MatExtraPc;
typedef struct mut_slice_ShapeInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_ShapeInfoPc;
typedef struct DumpInfo_ShapeInfoPc {
  struct mut_slice_ShapeInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_ShapeInfoPc;
typedef struct mut_slice_HkShapeInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_HkShapeInfoPc;
typedef struct DumpInfo_HkShapeInfoPc {
  struct mut_slice_HkShapeInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_HkShapeInfoPc;
typedef struct mut_slice_HkConstraintDataPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_HkConstraintDataPc;
typedef struct DumpInfo_HkConstraintDataPc {
  struct mut_slice_HkConstraintDataPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_HkConstraintDataPc;
typedef struct mut_slice_VBuffInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_VBuffInfoPc;
typedef struct DumpInfo_VBuffInfoPc {
  struct mut_slice_VBuffInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_VBuffInfoPc;
typedef struct mut_slice_IBuffInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_IBuffInfoPc;
typedef struct DumpInfo_IBuffInfoPc {
  struct mut_slice_IBuffInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_IBuffInfoPc;
typedef struct mut_slice_TextureInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_TextureInfoPc;
typedef struct DumpInfo_TextureInfoPc {
  struct mut_slice_TextureInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_TextureInfoPc;
typedef struct mut_slice_AnimationInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_AnimationInfoPc;
typedef struct DumpInfo_AnimationInfoPc {
  struct mut_slice_AnimationInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_AnimationInfoPc;
typedef struct mut_slice_HkConstraintInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_HkConstraintInfoPc;
typedef struct DumpInfo_HkConstraintInfoPc {
  struct mut_slice_HkConstraintInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_HkConstraintInfoPc;
typedef struct mut_slice_EffectInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_EffectInfoPc;
typedef struct DumpInfo_EffectInfoPc {
  struct mut_slice_EffectInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_EffectInfoPc;
typedef struct mut_slice_PFieldInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_PFieldInfoPc;
typedef struct DumpInfo_PFieldInfoPc {
  struct mut_slice_PFieldInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_PFieldInfoPc;
typedef struct mut_slice_GFXBlockInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_GFXBlockInfoPc;
typedef struct DumpInfo_GFXBlockInfoPc {
  struct mut_slice_GFXBlockInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_GFXBlockInfoPc;
typedef struct mut_slice_AnimationBlockInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_AnimationBlockInfoPc;
typedef struct DumpInfo_AnimationBlockInfoPc {
  struct mut_slice_AnimationBlockInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_AnimationBlockInfoPc;
typedef struct mut_slice_FoliageInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_FoliageInfoPc;
typedef struct DumpInfo_FoliageInfoPc {
  struct mut_slice_FoliageInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_FoliageInfoPc;
typedef struct mut_slice_RadiosityValsInfoPc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_RadiosityValsInfoPc;
typedef struct DumpInfo_RadiosityValsInfoPc {
  struct mut_slice_RadiosityValsInfoPc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_RadiosityValsInfoPc;
typedef struct mut_slice_u32Pc {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_u32Pc;
typedef struct DumpInfo_u32Pc {
  struct mut_slice_u32Pc vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_u32Pc;
typedef struct Vec_DumpInfoDataPc {
  uint64_t align;
  uint8_t pad[16];
} Vec_DumpInfoDataPc;
typedef struct DumpInfosPc {
  struct DumpInfo_ObjAPc objas;
  struct DumpInfo_Obj0Pc obj0s;
  struct DumpInfo_ModelInfoPc models;
  struct DumpInfo_BufferInfoPc buffers;
  struct DumpInfo_Mat1Pc mat1s;
  struct DumpInfo_Mat2Pc mat2s;
  struct DumpInfo_Mat3Pc mat3s;
  struct DumpInfo_Mat4Pc mat4s;
  struct DumpInfo_MatExtraPc mat_extras;
  struct DumpInfo_ShapeInfoPc shapes;
  struct DumpInfo_HkShapeInfoPc hk_shapes;
  struct DumpInfo_HkConstraintDataPc hk_constraint_datas;
  struct DumpInfo_VBuffInfoPc vbuffs;
  struct DumpInfo_IBuffInfoPc ibuffs;
  struct DumpInfo_TextureInfoPc textures;
  struct DumpInfo_AnimationInfoPc animations;
  struct DumpInfo_HkConstraintInfoPc hk_constraints;
  struct DumpInfo_EffectInfoPc effects;
  struct DumpInfo_PFieldInfoPc pfields;
  struct DumpInfo_GFXBlockInfoPc gfxs;
  struct DumpInfo_AnimationBlockInfoPc animation_blocks;
  struct DumpInfo_FoliageInfoPc foliages;
  struct DumpInfo_RadiosityValsInfoPc radiosity_vals;
  struct DumpInfo_u32Pc offsets;
  struct Vec_DumpInfoDataPc model_data;
  struct Vec_DumpInfoDataPc texture_data;
} DumpInfosPc;
typedef struct mut_slice_ObjAXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_ObjAXbox;
typedef struct DumpInfo_ObjAXbox {
  struct mut_slice_ObjAXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_ObjAXbox;
typedef struct mut_slice_Obj0Xbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Obj0Xbox;
typedef struct DumpInfo_Obj0Xbox {
  struct mut_slice_Obj0Xbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Obj0Xbox;
typedef struct mut_slice_ModelInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_ModelInfoXbox;
typedef struct DumpInfo_ModelInfoXbox {
  struct mut_slice_ModelInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_ModelInfoXbox;
typedef struct mut_slice_BufferInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_BufferInfoXbox;
typedef struct DumpInfo_BufferInfoXbox {
  struct mut_slice_BufferInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_BufferInfoXbox;
typedef struct mut_slice_Mat1Xbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat1Xbox;
typedef struct DumpInfo_Mat1Xbox {
  struct mut_slice_Mat1Xbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat1Xbox;
typedef struct mut_slice_Mat2Xbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat2Xbox;
typedef struct DumpInfo_Mat2Xbox {
  struct mut_slice_Mat2Xbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat2Xbox;
typedef struct mut_slice_Mat3Xbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat3Xbox;
typedef struct DumpInfo_Mat3Xbox {
  struct mut_slice_Mat3Xbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat3Xbox;
typedef struct mut_slice_Mat4Xbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_Mat4Xbox;
typedef struct DumpInfo_Mat4Xbox {
  struct mut_slice_Mat4Xbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_Mat4Xbox;
typedef struct mut_slice_MatExtraXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_MatExtraXbox;
typedef struct DumpInfo_MatExtraXbox {
  struct mut_slice_MatExtraXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_MatExtraXbox;
typedef struct mut_slice_ShapeInfoXbox {
  uint64_t align;
  uint8_t pad[8];
} mut_slice_ShapeInfoXbox;
typedef struct DumpInfo_ShapeInfoXbox {
  struct mut_slice_ShapeInfoXbox vals;
  uintptr_t ind;
  uintptr_t offset;
} DumpInfo_ShapeInfoXbox;