python_ffi/lotrc_rs.pxd


  cdef struct DumpInfo_ObjAPc:
    mut_slice_ObjAPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Obj0Pc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Obj0Pc:
    mut_slice_Obj0Pc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_ModelInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_ModelInfoPc:
    mut_slice_ModelInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_BufferInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_BufferInfoPc:
    mut_slice_BufferInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Mat1Pc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Mat1Pc:
    mut_slice_Mat1Pc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Mat2Pc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Mat2Pc:
    mut_slice_Mat2Pc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Mat3Pc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Mat3Pc:
    mut_slice_Mat3Pc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Mat4Pc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Mat4Pc:
    mut_slice_Mat4Pc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_MatExtraPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_MatExtraPc:
    mut_slice_MatExtraPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_ShapeInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_ShapeInfoPc:
    mut_slice_ShapeInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_HkShapeInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_HkShapeInfoPc:
    mut_slice_HkShapeInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_HkConstraintDataPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_HkConstraintDataPc:
    mut_slice_HkConstraintDataPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_VBuffInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_VBuffInfoPc:
    mut_slice_VBuffInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_IBuffInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_IBuffInfoPc:
    mut_slice_IBuffInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_TextureInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_TextureInfoPc:
    mut_slice_TextureInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_AnimationInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_AnimationInfoPc:
    mut_slice_AnimationInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_HkConstraintInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_HkConstraintInfoPc:
    mut_slice_HkConstraintInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_EffectInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_EffectInfoPc:
    mut_slice_EffectInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_PFieldInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_PFieldInfoPc:
    mut_slice_PFieldInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_GFXBlockInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_GFXBlockInfoPc:
    mut_slice_GFXBlockInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_AnimationBlockInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_AnimationBlockInfoPc:
    mut_slice_AnimationBlockInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_FoliageInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_FoliageInfoPc:
    mut_slice_FoliageInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_RadiosityValsInfoPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_RadiosityValsInfoPc:
    mut_slice_RadiosityValsInfoPc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_u32Pc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_u32Pc:
    mut_slice_u32Pc vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct Vec_DumpInfoDataPc:
    uint64_t align;
    uint8_t pad[16];

  cdef struct DumpInfosPc:
    DumpInfo_ObjAPc objas;
    DumpInfo_Obj0Pc obj0s;
    DumpInfo_ModelInfoPc models;
    DumpInfo_BufferInfoPc buffers;
    DumpInfo_Mat1Pc mat1s;
    DumpInfo_Mat2Pc mat2s;
    DumpInfo_Mat3Pc mat3s;
    DumpInfo_Mat4Pc mat4s;
    DumpInfo_MatExtraPc mat_extras;
    DumpInfo_ShapeInfoPc shapes;
    DumpInfo_HkShapeInfoPc hk_shapes;
    DumpInfo_HkConstraintDataPc hk_constraint_datas;
    DumpInfo_VBuffInfoPc vbuffs;
    DumpInfo_IBuffInfoPc ibuffs;
    DumpInfo_TextureInfoPc textures;
    DumpInfo_AnimationInfoPc animations;
    DumpInfo_HkConstraintInfoPc hk_constraints;
    DumpInfo_EffectInfoPc effects;
    DumpInfo_PFieldInfoPc pfields;
    DumpInfo_GFXBlockInfoPc gfxs;
    DumpInfo_AnimationBlockInfoPc animation_blocks;
    DumpInfo_FoliageInfoPc foliages;
    DumpInfo_RadiosityValsInfoPc radiosity_vals;
    DumpInfo_u32Pc offsets;
    Vec_DumpInfoDataPc model_data;
    Vec_DumpInfoDataPc texture_data;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_ObjAXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_ObjAXbox:
    mut_slice_ObjAXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Obj0Xbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Obj0Xbox:
    mut_slice_Obj0Xbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_ModelInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_ModelInfoXbox:
    mut_slice_ModelInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_BufferInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_BufferInfoXbox:
    mut_slice_BufferInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Mat1Xbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Mat1Xbox:
    mut_slice_Mat1Xbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Mat2Xbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Mat2Xbox:
    mut_slice_Mat2Xbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Mat3Xbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Mat3Xbox:
    mut_slice_Mat3Xbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_Mat4Xbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_Mat4Xbox:
    mut_slice_Mat4Xbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_MatExtraXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_MatExtraXbox:
    mut_slice_MatExtraXbox vals;
    uintptr_t ind;
    uintptr_t offset;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct mut_slice_ShapeInfoXbox:
    uint64_t align;
    uint8_t pad[8];

  cdef struct DumpInfo_ShapeInfoXbox:
    mut_slice_ShapeInfoXbox vals;
    uintptr_t ind;
    uintptr_t offset;
